shows-list/v2/index.css
/*Variables*/
:root {
  --primary: #0065ff;
  --secondary: #609fff;
  --background: #fff;
  --foreground: #000;
  --accent: lightgray;
}

.darked:root {
  --primary: #00e4ff;
  --secondary: #00abbf;
  --background: #000;
  --foreground: #fff;
  --accent: gray;
}

html {
	font-family: Open Sans;
	background-color: var(--background);
	color: var(--foreground);
}

body {
	max-width: 640px;
	margin: auto;
	padding: 10px;
}

.tr_bq {
	display: flex;
	cursor: pointer;
}

.header, .disclaimer {
	font-size: small;
}

.centered {
	text-align: center;
}

.category {
	font-size: small;
	padding: 10px;
	position: relative;
	-webkit-user-select: none; /* Safari */
	-ms-user-select: none; /* IE 10+ and Edge */
	user-select: none; /* Standard syntax */
}

.category-title {
	font-size: large;
}

.anime-year {
	visibility: collapse;
	padding: 2px 0;
}

.anime-row,
.new-anime-row,
.calendar,
.toggle {
	max-width: 100%;
	max-height: 100%;
	font-size: x-small;
	z-index: 99;
}

.calendar {	
	display: grid;
	height: 300px;
	overflow-y: auto;
}

.calendar-header {
	position: sticky;
	top: 0;
	text-align: center;
	background-color: var(--background);
}

.anime-row img,
.new-anime-row img {
	display: none;
	left: 0;
	right: 0;
	position: absolute;
	border: 4px solid var(--foreground);
	background-color: var(--foreground);
}

.darked .anime-row img,
.darked .new-anime-row img {
	border: 4px white solid;
	background-color: var(--background);
}

.anime-row:hover,
.new-anime-row:hover {
	/* font-size: 1em; */
	text-decoration: underline;
}

.anime-row:hover img,
.new-anime-row:hover img {
	width: 200px;
	max-height: 200px;
	margin: 1.5em auto;
	display: block;
	z-index: 3;
}

.anime-row:hover a,
.new-anime-row:hover a {
	position: absolute;
	margin: auto;
	/* left: 0; */
	right: 0;
	width: 200px;
	height: 220px;
}

.text-expanded {
	letter-spacing: 1em;
}

.anime-details-box {
	border-radius: 8px;
	border: 1px solid white;
	box-shadow: 3px 3px;
	padding: 4px 8px;
	display: none;
}

.anime-details-box,
.header {
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.anime-line:active .anime-details-box {
	box-shadow: 1px 1px;
	transform: translate(2px, 2px);
}

.year-display,
.calendar-cell {
	cursor: pointer;
}

.year-display:hover {
	color: var(--primary);
}

.calendar {
	font-size: x-small;
}

.calendar-cell:hover {
	background-color: var(--accent);
}

.highlight {
	border: 1px solid;
}

.filter {
	margin-left: 8px;
	font-size: 0.8em;
    padding: 2px;
}

.settings a {
	color: var(--foreground);
	text-decoration: none;
	display: flex;
	justify-content: center;
    padding: 5px;
}

.grid {
	padding: 40px 0;
	display: grid;
    grid-template-columns: 0 120px 1fr 9fr;
    grid-auto-rows: 25px;
    align-items: center;
}

.grid .container {
	display: contents;
}

.grid .thumb {
	max-width: 100px;
	max-height: 100px;
	grid-column-start: 2;
	border: 4px solid var(--foreground);
}

.grid .blob {
	grid-column-start: 3;
    font-size: 2em;
}

.container:hover a img,
.container:hover div {
	color: var(--foreground);
	filter: none;
}

.container:hover a,
.container:hover div {
	z-index: 10;
	
}

.grid .description {
	grid-column-start: 4;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	-webkit-user-select: auto;
	-khtml-user-select: auto;
	-moz-user-select: auto;
	-ms-user-select: auto;
	user-select: auto;
}

.container:hover ~ div,
.dimmed {
	color: var(--accent);
	filter: grayscale(90%) contrast(0.2) brightness(1.5);
}

.darked .container:hover ~ div,
.darked .dimmed {
	filter: grayscale(90%) contrast(0.2)  brightness(0.8);	
}

@media only screen and (max-device-width: 960px) {
	span {
		-webkit-user-select: all;
		-moz-user-select: all;
		-ms-user-select: all;
		user-select: all;
	}
	.anime-row,
	.new-anime-row,
	.year-display {
		-webkit-user-select: auto;
		-khtml-user-select: auto;
		-moz-user-select: auto;
		-ms-user-select: auto;
		user-select: auto;
		text-align: left;
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
		font-size: x-small;
	}
	.anime-row:hover a,
	.new-anime-row:hover a {
		position: fixed;
		width: 200px;
		height: 220px;
	}
	.anime-row:hover img,
	.new-anime-row:hover img {
		position: fixed;
		top: 0;
		width: 200px;
		max-height: 200px;
	}
	.grid .description {
		font-size: x-small;
	}
}

